@@ -1,4 +1,9 @@
-debug_print = false
+local argparse = require('argparse')
+
+local verbose = false
+argparse.processArgsGetopt({...}, {
+    {'v', 'verbose', handler=function() verbose = true end},
+})
 
 local function for_pray_need(needs, fn)
     for idx, need in ipairs(needs) do
@@ -81,15 +86,26 @@ local function get_prayer_targets(unit)
     end
 end
 
+local function unit_name(unit)
+    return dfhack.df2console(dfhack.TranslateName(dfhack.units.getVisibleName(unit)))
+end
+
+local count = 0
 for _,unit in ipairs(dfhack.units.getCitizens(false, true)) do
     local prayer_targets = get_prayer_targets(unit)
     if not unit.status.current_soul or not prayer_targets then
         goto next_unit
     end
     local needs = unit.status.current_soul.personality.needs
-    if shuffle_prayer_needs(needs, prayer_targets) and debug_print then
-        print('rebalanced prayer needs for ' ..
-            dfhack.df2console(dfhack.TranslateName(dfhack.units.getVisibleName(unit))))
+    if shuffle_prayer_needs(needs, prayer_targets) then
+        count = count + 1
+        if verbose then
+            print('Shuffled prayer target for '..unit_name(unit))
+        end
     end
     ::next_unit::
+end
+
+if verbose or count > 0 then
+    print(('Rebalanced prayer needs for %d units.'):format(count))
 end
