@@ -33,6 +33,7 @@ Template for new versions:
 ## Fixes
 
 ## Misc Improvements
+- `fix/stuck-worship`: reduced console output by default. ``--verbose`` option to print all affected units.
 
 ## Removed
 
